<resources>
    <string name="app_name">OrderingApplication</string>
    <string name="img_content_description">FoodItemImage</string>
    <string name="cart_menu">Cart</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="amount_label">AMT</string>
    <string name="default_amount">1</string>
    <string name="delete">Delete</string>
    <string name="cart_label">Your Cart</string>
    <string name="sample">Sample</string>
    <string name="notify_string_no_item">No item found in your cart</string>
    <string name="reset_label">Reset</string>
    <string name="submit_label">Submit Your Order</string>
    <string name="logo_label">LOGO</string>
    <string name="totalprice_label">Total:</string>
</resources>
