<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/coordinatorLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- Custom Toolbar -->
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        app:elevation="10dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_height="80dp"
            android:layout_width="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/title"
                    android:text="@string/cart_label"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:textColor="@color/colorBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/reset_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reset_label"
                    android:textSize="18sp"
                    android:textColor="@color/colorBlack"
                    android:background="#fde23b"
                    android:layout_marginEnd="20dp"
                    android:visibility="invisible"
                    android:layout_gravity="center_vertical"/>

            </LinearLayout>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <!-- Cart list recycler view -->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraitLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".CartActivity.CartActivity">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </android.support.v7.widget.RecyclerView>

    </android.support.constraint.ConstraintLayout>

    <!-- Submit button -->
    <Button
        android:id="@+id/submit_button"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_gravity="bottom"
        android:text="@string/submit_label"
        android:textColor="@color/colorWhite"
        android:background="@color/colorBlack"
        android:visibility="invisible"
        android:layout_margin="24dp"
        android:textSize="18sp" />

</android.support.design.widget.CoordinatorLayout>